--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -137,9 +137,9 @@
                                                 <segue destination="4" kind="modal" id="adO-Q2-kje"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="wFr-hc-Azj">
+                                        <barButtonItem key="rightBarButtonItem" image="168-upload-photo-2.png" id="wFr-hc-Azj">
                                             <connections>
-                                                <action selector="selectImageButtonClicked:" destination="szq-GH-tTU" id="t5O-sx-rXS"/>
+                                                <action selector="uploadButtonClicked:" destination="szq-GH-tTU" id="ARE-dq-rWh"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -147,11 +147,10 @@
                             </navigationBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghv-nd-72X">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="gOW-bg-PLR"/>
-                                    <constraint firstAttribute="width" constant="47" id="nN7-Kf-Ovt"/>
+                                    <constraint firstAttribute="width" constant="37" id="6yE-aG-RzZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" size="button"/>
-                                <state key="normal" image="168-upload-photo-2.png">
+                                <state key="normal" image="86-camera.png">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -159,7 +158,24 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="uploadButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="1Mx-GY-JZV"/>
+                                    <action selector="selectNewImageButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="SNK-XK-D12"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bez-Xa-YG1">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="37e-dk-bTC"/>
+                                    <constraint firstAttribute="width" constant="37" id="ZOV-e6-Qx9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                <state key="normal" image="45-movie-1.png">
+                                    <color key="titleColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="selectImageButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="9H4-dP-hFn"/>
                                 </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="0.0" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="1Pj-uR-75c">
@@ -174,23 +190,27 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Q71-Ji-ecO" firstAttribute="leading" secondItem="r1T-d4-2hM" secondAttribute="leading" type="default" id="0oU-xd-5q6"/>
+                            <constraint firstItem="Bez-Xa-YG1" firstAttribute="top" secondItem="ghv-nd-72X" secondAttribute="top" type="default" id="1fH-Tg-Wj1"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="top" secondItem="r1T-d4-2hM" secondAttribute="top" type="default" id="2fp-iY-Hoq"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="baseline" secondItem="r1T-d4-2hM" secondAttribute="baseline" type="default" id="2le-qa-CWn"/>
                             <constraint firstItem="yqw-Bk-A5C" firstAttribute="leading" secondItem="Wtu-ZH-vXo" secondAttribute="leading" type="default" id="621-D2-tQ1"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" type="default" id="7lI-kB-ynf"/>
+                            <constraint firstItem="Bez-Xa-YG1" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="54" id="8oJ-tU-zzI"/>
                             <constraint firstItem="r1T-d4-2hM" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="6" id="BHt-xd-XKi"/>
                             <constraint firstItem="jFe-Dy-3ty" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="178" id="GAT-xr-mDC"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="trailing" secondItem="saa-9n-xt3" secondAttribute="trailing" type="default" id="Iq3-zM-7Dv"/>
                             <constraint firstItem="yqw-Bk-A5C" firstAttribute="trailing" secondItem="Wtu-ZH-vXo" secondAttribute="trailing" type="default" id="JpM-ya-9Kj"/>
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="104" id="KnM-9U-4bM"/>
+                            <constraint firstItem="Bez-Xa-YG1" firstAttribute="baseline" secondItem="ghv-nd-72X" secondAttribute="baseline" type="default" id="RmW-fj-tYI"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="115" id="SWv-U6-xxl"/>
+                            <constraint firstItem="Bez-Xa-YG1" firstAttribute="bottom" secondItem="ghv-nd-72X" secondAttribute="bottom" type="default" id="d3t-Uc-h4l"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="trailing" secondItem="ghv-nd-72X" secondAttribute="trailing" type="default" id="fBm-Kr-auu"/>
-                            <constraint firstItem="ghv-nd-72X" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="54" id="fqm-TU-1kk"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="153" id="nys-pY-Y9L"/>
                             <constraint firstItem="sbJ-gR-aeo" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="108" id="pKE-XB-imh"/>
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="leading" secondItem="Q71-Ji-ecO" secondAttribute="leading" type="default" id="qOo-F2-aza"/>
                             <constraint firstItem="Q71-Ji-ecO" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="80" id="qP1-Zt-CbK"/>
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="trailing" secondItem="Q71-Ji-ecO" secondAttribute="trailing" type="default" id="rug-ta-obZ"/>
+                            <constraint firstItem="ghv-nd-72X" firstAttribute="leading" secondItem="Bez-Xa-YG1" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="tM1-c3-5bh"/>
                             <constraint firstItem="yqw-Bk-A5C" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="129" id="tPZ-rH-VcO"/>
                             <constraint firstItem="jFe-Dy-3ty" firstAttribute="centerX" secondItem="SQL-3f-poU" secondAttribute="centerX" type="default" id="uDB-jr-94C"/>
                             <constraint firstItem="SQL-3f-poU" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" type="default" id="wwh-Ey-lgo"/>
@@ -302,7 +322,6 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="uploadButtonClicked:" destination="szq-GH-tTU" eventType="touchUpInside" id="03z-ZC-mbJ"/>
                                     <action selector="uploadMerchandizeData:" destination="aqQ-7V-sIA" eventType="touchUpInside" id="Ljc-I4-zbK"/>
                                 </connections>
                             </button>
@@ -444,6 +463,8 @@
         <image name="112-group.png" width="32" height="21"/>
         <image name="154-necktie.png" width="8" height="27"/>
         <image name="168-upload-photo-2.png" width="22" height="25"/>
+        <image name="45-movie-1.png" width="19" height="25"/>
+        <image name="86-camera.png" width="24" height="18"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
