--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" barStyle="blackOpaque" id="wf9-kc-X0e">
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="wf9-kc-X0e">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
@@ -81,7 +81,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jFe-Dy-3ty">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="jFe-Dy-3ty">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="285" id="Nu8-Cr-kZd"/>
                                     <constraint firstAttribute="width" constant="318" id="uVM-bT-Pdf"/>
@@ -137,7 +137,7 @@
                                                 <segue destination="4" kind="modal" id="adO-Q2-kje"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" image="168-upload-photo-2.png" id="wFr-hc-Azj">
+                                        <barButtonItem key="rightBarButtonItem" title="Post" id="wFr-hc-Azj">
                                             <connections>
                                                 <action selector="uploadButtonClicked:" destination="szq-GH-tTU" id="ARE-dq-rWh"/>
                                             </connections>
@@ -186,6 +186,9 @@
                                     <action selector="sliderMoved:" destination="szq-GH-tTU" eventType="touchUpInside" id="QDR-af-O1S"/>
                                 </connections>
                             </slider>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="W9l-2u-ipB">
+                                <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -203,6 +206,8 @@
                             <constraint firstItem="Wtu-ZH-vXo" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="104" id="KnM-9U-4bM"/>
                             <constraint firstItem="Bez-Xa-YG1" firstAttribute="baseline" secondItem="ghv-nd-72X" secondAttribute="baseline" type="default" id="RmW-fj-tYI"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="115" id="SWv-U6-xxl"/>
+                            <constraint firstItem="W9l-2u-ipB" firstAttribute="leading" secondItem="saa-9n-xt3" secondAttribute="leading" constant="67" id="Yvj-xT-KeT"/>
+                            <constraint firstItem="W9l-2u-ipB" firstAttribute="centerY" secondItem="SQL-3f-poU" secondAttribute="centerY" type="default" id="cCH-8s-gQN"/>
                             <constraint firstItem="Bez-Xa-YG1" firstAttribute="bottom" secondItem="ghv-nd-72X" secondAttribute="bottom" type="default" id="d3t-Uc-h4l"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="trailing" secondItem="ghv-nd-72X" secondAttribute="trailing" type="default" id="fBm-Kr-auu"/>
                             <constraint firstItem="1Pj-uR-75c" firstAttribute="top" secondItem="saa-9n-xt3" secondAttribute="top" constant="153" id="nys-pY-Y9L"/>
@@ -218,6 +223,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="W9l-2u-ipB" id="iOc-UH-7Jn"/>
                         <outlet property="buttonUpload" destination="ghv-nd-72X" id="2QA-3t-wMD"/>
                         <outlet property="contentSlider" destination="1Pj-uR-75c" id="Xja-67-eze"/>
                         <outlet property="image" destination="jFe-Dy-3ty" id="9x9-xh-udn"/>
@@ -363,7 +369,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="wsw-HH-dpS">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="engineerCellTemplate" textLabel="WMg-5f-3eT" detailTextLabel="ejs-Qa-Onf" style="IBUITableViewCellStyleSubtitle" id="3fx-0U-1Mm">
                                 <rect key="frame" x="0.0" y="46" width="320" height="46"/>
@@ -385,6 +391,9 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="nac-Mm-MQQ" kind="push" identifier="facebookPostsToDetails" id="Olg-O6-b5R"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
@@ -399,6 +408,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUb-hm-QlA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="999" y="172"/>
+        </scene>
+        <!--Facebook DetailsVC - Comments-->
+        <scene sceneID="aIz-5T-TCt">
+            <objects>
+                <tableViewController id="nac-Mm-MQQ" customClass="MQFacebookDetailsVC" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="bJC-wK-zLp">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentsCellId" textLabel="PHE-BP-y6b" detailTextLabel="cd6-Z2-z3X" style="IBUITableViewCellStyleSubtitle" id="0sw-pB-YIr">
+                                <rect key="frame" x="0.0" y="46" width="320" height="46"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="10" y="1" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHE-BP-y6b">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cd6-Z2-z3X">
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="nac-Mm-MQQ" id="QtR-Wo-uQn"/>
+                            <outlet property="delegate" destination="nac-Mm-MQQ" id="iKX-Re-6zl"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Comments" id="ArJ-Na-Hvu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sjo-iu-s3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1502" y="172"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
@@ -467,6 +518,64 @@
         <image name="86-camera.png" width="24" height="18"/>
         <image name="91-beaker-2.png" width="20" height="24"/>
     </resources>
+    <classes>
+        <class className="MQEngineerViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQEngineerViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="refreshFacebookData:"/>
+            </relationships>
+        </class>
+        <class className="MQFacebookDetailsVC" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQFacebookDetailsVC.h"/>
+        </class>
+        <class className="MQFirstViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQFirstViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="refreshData:"/>
+                <relationship kind="action" name="segmentedControlIndexChanged"/>
+                <relationship kind="outlet" name="segmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="MQSecondViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQSecondViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="refreshMerchandizeData:"/>
+            </relationships>
+        </class>
+        <class className="MQSecondViewControllerStep2" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQSecondViewControllerStep2.h"/>
+            <relationships>
+                <relationship kind="action" name="selectImageClicked:"/>
+                <relationship kind="action" name="uploadMerchandizeData:"/>
+                <relationship kind="outlet" name="additionalText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
+                <relationship kind="outlet" name="merchandizeText" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="MQViewController1Step2" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MQViewController1Step2.h"/>
+            <relationships>
+                <relationship kind="action" name="selectImageButtonClicked:"/>
+                <relationship kind="action" name="selectNewImageButtonClicked:"/>
+                <relationship kind="action" name="sliderMoved:"/>
+                <relationship kind="action" name="uploadButtonClicked:"/>
+                <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="buttonUpload" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contentSlider" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="image" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="imagePicker" candidateClass="UIImagePickerController"/>
+                <relationship kind="outlet" name="labelCar" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="labelFeatures" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="labelUserName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectImage" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="tagText" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
