--- a/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/MQ163FirstShot/en.lproj/MainStoryboard_iPhone.storyboard
@@ -511,7 +511,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create Lead" id="jdH-hn-M8b">
-                        <barButtonItem key="rightBarButtonItem" title="Go" id="n1A-Zn-Kl1"/>
+                        <barButtonItem key="rightBarButtonItem" title="Go" id="n1A-Zn-Kl1">
+                            <connections>
+                                <action selector="SaveButtonClicked:" destination="fu8-Dc-epz" id="uFg-p3-RA3"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="LastName" destination="0kh-tS-oq7" id="LZc-Xx-fTQ"/>
